force-app/main/default/objects/Test_Case__c/Test_Case__c.object-meta.xml
<CustomObject>
    <description>TOOLKIT - An object that represents a case for which you would run a test script.</description>
    <label>Test Scenario</label>
    <nameField>
        <label>Test Scenario ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Scenarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>