force-app/main/default/objects/Test_Case__c/fields/Assumption__c.field-meta.xml
<CustomField>
    <fullName>Assumption__c</fullName>
    <description>Assumptions for the test case</description>
    <label>Assumption</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>