force-app/main/default/objects/Test_Case__c/fields/Capability__c.field-meta.xml
<CustomField>
    <fullName>Capability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the capability (Account, Contact, etc.) that corresponds to the test scenario</description>
    <label>Capability</label>
    <referenceTo>Capability__c</referenceTo>
    <relationshipLabel>Test Scenarios</relationshipLabel>
    <relationshipName>Test_Scenarios</relationshipName>
    <type>Lookup</type>
</CustomField>