force-app/main/default/objects/Test_Case__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>Date when the test case completed</description>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>