force-app/main/default/objects/Test_Case__c/fields/Execution_Steps__c.field-meta.xml
<CustomField>
    <fullName>Execution_Steps__c</fullName>
    <description>Execution steps for the test case</description>
    <label>Test Script/ Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>