force-app/main/default/objects/Test_Case__c/fields/Expected_Result__c.field-meta.xml
<CustomField>
    <fullName>Expected_Result__c</fullName>
    <description>Expected results of the test case</description>
    <label>Expected Results</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>