force-app/main/default/objects/Test_Case__c/fields/Group_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Group_Assignment__c</fullName>
    <label>Group Assignment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OSS Rep - Group 1</fullName>
            </value>
            <value>
                <fullName>OSS Rep - Group 2</fullName>
            </value>
            <value>
                <fullName>OSS Rep - Group 3</fullName>
            </value>
            <value>
                <fullName>OSS Manager - Group 1</fullName>
            </value>
            <value>
                <fullName>OSS Manager - Group 2</fullName>
            </value>
            <value>
                <fullName>OSS Support - Group 1</fullName>
            </value>
            <value>
                <fullName>OSS Support - Group 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>