force-app/main/default/objects/Test_Case__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Phase</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Test Scenarios</relationshipLabel>
    <relationshipName>Test_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>