force-app/main/default/objects/Test_Case__c/fields/Scenario_Status__c.field-meta.xml
<CustomField>
    <fullName>Scenario_Status__c</fullName>
    <description>Status of Scenario (written properly or not etc.)</description>
    <label>Scenario Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready for Review</fullName>
                <default>true</default>
                <label>Ready for Review</label>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Ready For Testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>