force-app/main/default/objects/Test_Case__c/fields/Script_Type__c.field-meta.xml
<CustomField>
    <fullName>Script_Type__c</fullName>
    <label>Scenario Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capability</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>