force-app/main/default/objects/Test_Case__c/fields/Script_Updated_per_Build_Change__c.field-meta.xml
<CustomField>
    <fullName>Script_Updated_per_Build_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Script Updated per Build Change</label>
    <type>Checkbox</type>
</CustomField>