force-app/main/default/objects/Test_Case__c/fields/Step__c.field-meta.xml
<CustomField>
    <fullName>Step__c</fullName>
    <description>Steps of the test case</description>
    <label>Step</label>
    <length>20</length>
    <type>Text</type>
</CustomField>