force-app/main/default/objects/Test_Case__c/fields/Test_Phase__c.field-meta.xml
<CustomField>
    <fullName>Test_Phase__c</fullName>
    <label>Testing Stage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIT</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>End-to-End</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>BUILD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>