force-app/main/default/objects/Test_Case__c/fields/Test_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Test_Scenario__c</fullName>
    <description>This is a description of the test scenario.</description>
    <label>Test Scenario Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>