force-app/main/default/objects/Test_Case__c/fields/Test_Script_Description__c.field-meta.xml
<CustomField>
    <fullName>Test_Script_Description__c</fullName>
    <label>Test Script Description</label>
    <type>TextArea</type>
</CustomField>