force-app/main/default/objects/Test_Case__c/fields/Total_Results_Expected__c.field-meta.xml
<CustomField>
    <fullName>Total_Results_Expected__c</fullName>
    <label>Total Results Expected</label>
    <type>TextArea</type>
</CustomField>