force-app/main/default/objects/Test_Case__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>This is the User that the tester will log in as to test the scenario.</description>
    <label>User</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OSS Rep</fullName>
            </value>
            <value>
                <fullName>OSS Manager</fullName>
            </value>
            <value>
                <fullName>OSS Support</fullName>
            </value>
            <value>
                <fullName>System Administrator</fullName>
            </value>
            <value>
                <fullName>Marketing User</fullName>
                <label>Marketing Leadership</label>
            </value>
            <value>
                <fullName>LSS</fullName>
            </value>
            <value>
                <fullName>Automotive Leadership</fullName>
            </value>
            <value>
                <fullName>Automotive Manager</fullName>
            </value>
            <value>
                <fullName>UTS Leadership</fullName>
            </value>
            <value>
                <fullName>UTS Manager</fullName>
            </value>
            <value>
                <fullName>EP Leadership</fullName>
            </value>
            <value>
                <fullName>EP Manager</fullName>
            </value>
            <value>
                <fullName>Marketing Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>