force-app/main/default/objects/Test_Case__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Capability__c</columns>
    <columns>Test_Phase__c</columns>
    <columns>Test_Scenario__c</columns>
    <columns>Scenario_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>