force-app/main/default/objects/Test_Case__c/listViews/All_UAT_Test_Scenarios.listView-meta.xml
<ListView>
    <fullName>All_UAT_Test_Scenarios</fullName>
    <columns>NAME</columns>
    <columns>Capability__c</columns>
    <columns>Test_Phase__c</columns>
    <columns>Test_Scenario__c</columns>
    <columns>Scenario_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Test_Phase__c</field>
        <operation>includes</operation>
        <value>UAT</value>
    </filters>
    <label>All UAT Test Scenarios</label>
</ListView>