force-app/main/default/objects/Test_Case__c/listViews/CTI_Test_Scenarios.listView-meta.xml
<ListView>
    <fullName>CTI_Test_Scenarios</fullName>
    <columns>NAME</columns>
    <columns>Capability__c</columns>
    <columns>Test_Phase__c</columns>
    <columns>Test_Scenario__c</columns>
    <columns>Scenario_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Release__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Capability__c</field>
        <operation>equals</operation>
        <value>CTI</value>
    </filters>
    <label>CTI Test Scenarios</label>
</ListView>