force-app/main/default/objects/Test_Case__c/listViews/Phase_2_Test_Scenarios.listView-meta.xml
<ListView>
    <fullName>Phase_2_Test_Scenarios</fullName>
    <columns>Request__c</columns>
    <columns>NAME</columns>
    <columns>Capability__c</columns>
    <columns>Test_Phase__c</columns>
    <columns>Test_Scenario__c</columns>
    <columns>Scenario_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Release__c</field>
        <operation>equals</operation>
        <value>Phase 2</value>
    </filters>
    <label>Phase 2 Test Scenarios</label>
</ListView>