force-app/main/default/objects/Test_Case__c/listViews/SIT_Test_Scenarios.listView-meta.xml
<ListView>
    <fullName>SIT_Test_Scenarios</fullName>
    <columns>NAME</columns>
    <columns>Capability__c</columns>
    <columns>Test_Phase__c</columns>
    <columns>Test_Scenario__c</columns>
    <columns>Scenario_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Meghan Hughes</value>
    </filters>
    <label>SIT Test Scenarios</label>
</ListView>